// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Messages - test Messages currency USD, privacy high & mode advanced - snapshot 1`] = `
<View
  accessibilityLabel="text translated"
  accessible={true}
  style={
    {
      "display": "flex",
      "height": "100%",
      "justifyContent": "flex-start",
      "width": "100%",
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#011401",
        "display": "flex",
        "paddingBottom": 0,
        "paddingTop": 10,
        "zIndex": -1,
      }
    }
    testID="header"
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "height": 40,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "marginTop": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "justifyContent": "center",
            "margin": 0,
            "marginRight": 5,
            "minHeight": 25,
            "minWidth": 25,
            "padding": 0,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <
            color="red"
            icon={
              {
                "icon": [
                  640,
                  512,
                  [
                    62337,
                    "cloud-download",
                    "cloud-download-alt",
                  ],
                  "f0ed",
                  "M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128l-368 0zm79-167l80 80c9.4 9.4 24.6 9.4 33.9 0l80-80c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-39 39L344 184c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 134.1-39-39c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9z",
                ],
                "iconName": "cloud-arrow-down",
                "prefix": "fas",
              }
            }
            size={20}
          />
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "marginHorizontal": 5,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#011401",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "margin": 0,
                "marginRight": 5,
                "minHeight": 25,
                "minWidth": 25,
                "padding": 0,
              }
            }
          >
            <
              color="#18bd18"
              icon={
                {
                  "icon": [
                    448,
                    512,
                    [
                      128274,
                    ],
                    "f023",
                    "M144 144l0 48 160 0 0-48c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192l0-48C80 64.5 144.5 0 224 0s144 64.5 144 144l0 48 16 0c35.3 0 64 28.7 64 64l0 192c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 256c0-35.3 28.7-64 64-64l16 0z",
                  ],
                  "iconName": "lock",
                  "prefix": "fas",
                }
              }
              size={25}
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "height": 20,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "flexWrap": "wrap",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 18,
            "fontWeight": "600",
            "marginBottom": 3,
            "opacity": 1,
            "paddingHorizontal": 5,
          }
        }
      >
        text translated
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "left": 0,
          "padding": 11.5,
          "position": "absolute",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="text translated"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "marginRight": 5,
              "opacity": 1,
            }
          }
          testID="header.drawmenu"
        >
          <
            color="#ffffff"
            icon={
              {
                "icon": [
                  448,
                  512,
                  [
                    "navicon",
                  ],
                  "f0c9",
                  "M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z",
                ],
                "iconName": "bars",
                "prefix": "fas",
              }
            }
            size={45}
          />
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "padding": 15,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/img/logobig-zingo.png",
          }
        }
        style={
          {
            "borderRadius": 10,
            "height": 38,
            "resizeMode": "contain",
            "width": 38,
          }
        }
      />
    </View>
    <View
      style={
        {
          "backgroundColor": "#18bd18",
          "height": 1,
          "width": "100%",
        }
      }
    />
  </View>
  <ActivityIndicator
    color="#18bd18"
    size="large"
    style={
      {
        "marginVertical": 20,
      }
    }
  />
  <RCTScrollView
    accessibilityLabel="text translated"
    accessible={true}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onScroll={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[MockFunction]}
        refreshing={false}
        tintColor="#c3c3c3"
        title="text translated"
      />
    }
    scrollEventThrottle={100}
    style={
      {
        "flexGrow": 1,
        "marginTop": 10,
        "opacity": 0,
        "width": "100%",
      }
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "flex-start",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "#18bd18",
              "opacity": 0.65,
            }
          }
        >
          text translated
        </Text>
      </View>
      <View
        style={
          {
            "marginBottom": 30,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`Component Messages - test Messages no currency, privacy normal & mode basic - snapshot 1`] = `
<View
  accessibilityLabel="text translated"
  accessible={true}
  style={
    {
      "display": "flex",
      "height": "100%",
      "justifyContent": "flex-start",
      "width": "100%",
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  />
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#011401",
        "display": "flex",
        "paddingBottom": 0,
        "paddingTop": 10,
        "zIndex": -1,
      }
    }
    testID="header"
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "height": 40,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "marginTop": 12,
        }
      }
    />
    <View
      style={
        {
          "height": 20,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "flexWrap": "wrap",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 18,
            "fontWeight": "600",
            "marginBottom": 3,
            "opacity": 1,
            "paddingHorizontal": 5,
          }
        }
      >
        text translated
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "left": 0,
          "padding": 11.5,
          "position": "absolute",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="text translated"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "marginRight": 5,
              "opacity": 1,
            }
          }
          testID="header.drawmenu"
        >
          <
            color="#ffffff"
            icon={
              {
                "icon": [
                  448,
                  512,
                  [
                    "navicon",
                  ],
                  "f0c9",
                  "M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z",
                ],
                "iconName": "bars",
                "prefix": "fas",
              }
            }
            size={45}
          />
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "padding": 15,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/img/logobig-zingo.png",
          }
        }
        style={
          {
            "borderRadius": 10,
            "height": 38,
            "resizeMode": "contain",
            "width": 38,
          }
        }
      />
    </View>
    <View
      style={
        {
          "backgroundColor": "#18bd18",
          "height": 1,
          "width": "100%",
        }
      }
    />
  </View>
  <ActivityIndicator
    color="#18bd18"
    size="large"
    style={
      {
        "marginVertical": 20,
      }
    }
  />
  <RCTScrollView
    accessibilityLabel="text translated"
    accessible={true}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onScroll={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[MockFunction]}
        refreshing={false}
        tintColor="#c3c3c3"
        title="text translated"
      />
    }
    scrollEventThrottle={100}
    style={
      {
        "flexGrow": 1,
        "marginTop": 10,
        "opacity": 0,
        "width": "100%",
      }
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "flex-start",
            "marginBottom": 10,
            "marginTop": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "#18bd18",
              "opacity": 0.65,
            }
          }
        >
          text translated
        </Text>
      </View>
      <View
        style={
          {
            "marginBottom": 30,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;
